--- a/aurora-vue/aurora-admin/public/index.html
+++ b/aurora-vue/aurora-admin/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>后台管理系统</title>
+    <title>博客管理系统</title>
     <script src="<%= BASE_URL %>lib/js/prism.js" data-manual></script>
     <script src="https://unpkg.com/mermaid/dist/mermaid.min.js"></script>
     <link rel="stylesheet" href="<%= BASE_URL %>lib/css/prism.css" />
